Fix tab placeholder from jumping

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -144,10 +144,13 @@
 
   .placeholder {
     height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
-    margin-left: -9px; // center between tabs
     pointer-events: none;
+    &:before {
+      margin-left: -9px; // center between tabs
+    }
     &:after {
       top: @tab-height + @tab-top-padding + @tab-bottom-border-height - 2px;
+      margin-left: -10px; // center between tabs
     }
   }
 }
